# Agentic-Youtbe

./: CLAUDE.local.md  Post-Scripts.md  Project_Hierarchy.md  README.md  audience_avatar_autonomous_drones.html  voice_style_guide.docx
Agents/YT-Editor/: .env.example  .gitignore  AGENTS.md  PROJECT_SPEC.md  README.md  config.yaml  pkg-structure.md  pyproject.toml
Agents/YT-Editor/prompts/: broll_detector.md  chapter_generator.md  hook_detector.md  shorts_detector.md  title_generator.md  youtube_description.md
Agents/YT-Editor/schemas/: broll_segments.schema.json  chapters.schema.json  full_analysis.schema.json  hook_segments.schema.json  youtube_metadata.schema.json
Agents/YT-Editor/scripts/: run_mvp1.py
Agents/YT-Editor/src/yt_agent_editor/: __init__.py  cli.py  config.py  models.py  pipeline.py
Agents/YT-Editor/src/yt_agent_editor/analysis/: __init__.py  generators.py  llm_client.py  prompts.py  schema_validation.py
Agents/YT-Editor/src/yt_agent_editor/export/: reports.py
Agents/YT-Editor/src/yt_agent_editor/transcript/: __init__.py  merge.py  srt_parser.py
Agents/YT-Editor/src/yt_agent_editor/utils/: timecode.py
Agents/YT-Editor/src/yt_agent_editor/video/: concatenate_video.py  extract_clips.py  make_intro_montage.py  probe_video.py
Agents/YT-Editor/tests/: test_analysis_exports.py  test_pipeline.py  test_schemas.py  test_srt_parser.py  test_timecode.py  test_video_commands.py
scripts/: script1.md  script2.md  script3.md
