[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yt-agent-editor"
version = "0.1.0"
description = "CLI tools for analyzing YouTube editing workflows from video files and SRT transcripts."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "YouTube Agent Editor" }]
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.4",
]

[project.scripts]
yt-agent-editor = "yt_agent_editor.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
